cabal-version:      2.4
name:               x2020
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Johan Hidding
maintainer:         j.hidding@esciencecenter.nl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable x2020
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
                      Program.Types
                      Program.Run
                      Program.Parser
                      Program
                      Day01
                      Day02
                      Day03
                      Day04
                      Day05
                      Day06
                      Day07
                      Day08
                      Day09
                      Day10
                      Day11
                      Day12
                      DayXX

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
                    , rio
                    , optparse-applicative
                    , megaparsec
                    , containers
                    , vector
                    , repa
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:  NoImplicitPrelude OverloadedStrings RecordWildCards NamedFieldPuns
                         FlexibleContexts FlexibleInstances TypeFamilies GeneralizedNewtypeDeriving
                         UndecidableSuperClasses
